--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,20 +32,27 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to AWS EC2 (Blue-Green)
-        env:
-          IMAGE: ${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest
+        # 1. Define local variables using secrets
         run: |
+          # Define local variables using secrets. These will be substituted by the runner.
+          DOCKER_USER_SECRET="${{ secrets.DOCKER_USERNAME }}"
+          DOCKER_PASS_SECRET="${{ secrets.DOCKER_PASSWORD }}"
+          APP_IMAGE="${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest"
+
           echo "${{ secrets.AWS_KEY }}" > private_key.pem
           chmod 600 private_key.pem
 
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }} << 'EOF'
+          # 2. SSH into remote host using UNQUOTED EOF (<< EOF)
+          # This allows the runner to substitute the SECRET variables.
+          # All variables meant for the REMOTE shell must now be ESCAPED (\$).
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }} << EOF
             set -e
 
             # --- Install docker & nginx if missing ---
             if ! command -v docker >/dev/null 2>&1; then
               sudo apt-get update -y
               sudo apt-get install -y docker.io
-              sudo usermod -aG docker $USER || true
+              sudo usermod -aG docker \$USER || true  # Escaped \$USER
               sudo systemctl enable --now docker
             fi
 
@@ -54,32 +61,33 @@ jobs:
               sudo apt-get install -y nginx
             fi
 
-            # --- Ensure docker network ---
-            docker network create app_net || true
+            # --- Ensure docker network (Fixed: Silenced error output) ---
+            docker network create app_net 2>/dev/null || true
 
             # --- Start MongoDB once (persists across deployments) ---
-            if ! docker ps --filter "name=mongo-db" --format '{{.Names}}' | grep -q '^mongo-db$'; then
-              docker run -d \
-                --name mongo-db \
-                --network app_net \
-                -p 27017:27017 \
-                -v mongo_data:/data/db \
+            if ! docker ps --filter "name=mongo-db" --format '{{.Names}}' | grep -q '^mongo-db\$'; then # Escaped \$
+              docker run -d \\
+                --name mongo-db \\
+                --network app_net \\
+                -p 27017:27017 \\
+                -v mongo_data:/data/db \\
                 mongo:7
               echo "Waiting for MongoDB to initialize..."
               sleep 10
             fi
 
             # --- Pull latest app image ---
-            docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
-            docker pull "${IMAGE}"
+            # *** FIX: Variables substituted here by the local runner ***
+            docker login -u "${DOCKER_USER_SECRET}" -p "${DOCKER_PASS_SECRET}"
+            docker pull "${APP_IMAGE}"
 
-            # --- Determine active color ---
-            if docker ps --format '{{.Names}}' | grep -q '^app-blue$'; then
+            # --- Determine active color (All variables below must be escaped \$ to run on remote) ---
+            if docker ps --format '{{.Names}}' | grep -q '^app-blue\$'; then
               ACTIVE_COLOR="blue"
               IDLE_COLOR="green"
               IDLE_PORT=3002
               ACTIVE_PORT=3001
-            elif docker ps --format '{{.Names}}' | grep -q '^app-green$'; then
+            elif docker ps --format '{{.Names}}' | grep -q '^app-green\$'; then
               ACTIVE_COLOR="green"
               IDLE_COLOR="blue"
               IDLE_PORT=3001
@@ -96,12 +104,12 @@ jobs:
             docker rm -f app-\$IDLE_COLOR 2>/dev/null || true
 
             # --- Run idle container (bind to its host port) ---
-            docker run -d \
-              --name app-\$IDLE_COLOR \
-              --network app_net \
-              -p \$IDLE_PORT:5000 \
-              -e MONGO_URL="mongodb://mongo-db:27017/bluegreen" \
-              "${IMAGE}"
+            docker run -d \\
+              --name app-\$IDLE_COLOR \\
+              --network app_net \\
+              -p \$IDLE_PORT:5000 \\
+              -e MONGO_URL="mongodb://mongo-db:27017/bluegreen" \\
+              "${APP_IMAGE}"
 
             # --- Simple warmup check (optional) ---
             echo "Warming up new app on port \$IDLE_PORT..."
@@ -120,7 +128,7 @@ jobs:
               server {
                   listen 3000;
                   server_name _;
-              
+                                
                   location / {
                       proxy_pass http://127.0.0.1:\$IDLE_PORT;
                       proxy_http_version 1.1;
