--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,33 +1,33 @@
 name: CI/CD for Express App (Blue-Green Deployment)
 
 on:
-  push:
-    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3 # FIX: Use dedicated action
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
-        env:
-          IMAGE: ${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest
-        run: |
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
+      - name: Build and Push Docker Image
+        env:
+          IMAGE: ${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest
+        run: |
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
 
-    deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
@@ -38,12 +38,12 @@ jobs:
         env:
           IMAGE: ${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest
         run: |
-          # 1. Prepare SSH Key
+          # 1. Prepare SSH key
           echo "${{ secrets.AWS_KEY }}" > private_key.pem
           chmod 600 private_key.pem
 
-          # 2. SSH into remote host
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }} << 'EOF'
+          # 2. SSH into EC2 host and deploy
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }} <<'EOF'
             set -e
 
             # --- Install docker & nginx if missing ---
@@ -62,7 +62,7 @@ jobs:
             # --- Ensure docker network ---
             docker network create app_net 2>/dev/null || true
 
-            # --- Start MongoDB ---
+            # --- Start MongoDB if not running ---
             if ! docker ps --filter "name=mongo-db" --format '{{.Names}}' | grep -q '^mongo-db$'; then
               docker run -d \
                 --name mongo-db \
@@ -97,7 +97,7 @@ jobs:
 
             echo "Active: $ACTIVE_COLOR | Deploying to idle: $IDLE_COLOR (port $IDLE_PORT)"
 
-            # --- Stop/remove idle container ---
+            # --- Stop/remove idle container if exists ---
             docker rm -f app-$IDLE_COLOR 2>/dev/null || true
 
             # --- Run idle container ---
@@ -108,6 +108,7 @@ jobs:
               -e MONGO_URL="mongodb://mongo-db:27017/bluegreen" \
               ${{ secrets.DOCKER_USERNAME }}/bluegreen-express:latest
 
+            # --- Health check ---
             echo "Warming up new app on port $IDLE_PORT..."
             for i in {1..20}; do
               if curl -fsS "http://127.0.0.1:$IDLE_PORT/health" >/dev/null; then
@@ -117,7 +118,7 @@ jobs:
               sleep 2
             done
 
-            # --- NGINX config ---
+            # --- Configure NGINX ---
             if [ ! -f /etc/nginx/conf.d/bluegreen.conf ]; then
               sudo mkdir -p /etc/nginx/conf.d
               sudo tee /etc/nginx/conf.d/bluegreen.conf >/dev/null <<'NGX'
@@ -147,7 +148,7 @@ NGX
             echo "Switched traffic to $IDLE_COLOR."
 
             if [ "$ACTIVE_COLOR" != "none" ]; then
-              docker rm -f app-$ACTIVE_COLOR || true
-              echo "Removed old $ACTIVE_COLOR."
-            fi
-          EOF
+              docker rm -f app-$ACTIVE_COLOR || true
+              echo "Removed old $ACTIVE_COLOR."
+            fi
+          EOF
